test/tasty/neg/src-2/TestHKNest.check
TestHKNest_fail.scala:6: error: type F has diverging type lambdas as bounds: >: [X]tastytest.HKNest.Arg1[X] <: [Y, Z]tastytest.HKNest.QuxArg[Y]
  def test14 = new HKClass_14[Quuux].foo(new Quuux[QuxArg]) // error: diverging lamdba type bounds
                                     ^
TestHKNest_fail.scala:7: error: type F has diverging type lambdas as bounds: >: [X]tastytest.HKNest.Arg1[X] <: [Y, Z]tastytest.HKNest.QuxArg[Y]
  def test15 = new HKClass_14[Quuuux].foo(new Quuuux[DummyQuxArg]) // error: diverging lamdba type bounds
                                      ^
2 errors
